# embassy-ra4m1

./: Cargo.toml
.cargo/: config.toml
embassy-ra4m1/: Cargo.toml  build.rs  pins.toml
embassy-ra4m1-examples/: Cargo.toml  build.rs  memory.x
embassy-ra4m1-examples/src/: main.rs
embassy-ra4m1/src/: gpio.rs  lib.rs  peripherals.rs
