[workspace]
members = ["embassy-ra4m1", "embassy-ra4m1-examples"]

resolver = "3"

# - opt-level = "z": minimise flash usage
# - debug = 2: keep debug info even in release so probe-rs can show source locations
# - lto: link-time optimisation reduces flash further
[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = "z"

# dev builds: still optimise somewhat, otherwise debug builds
# are too large for 256KB flash with all the defmt machinery
[profile.dev]
codegen-units = 1
debug = 2
opt-level = 1
