[package]
name = "embassy-ra4m1"
version = "0.1.0"
edition = "2024"

[dependencies]
ra4m1 = { git = "https://github.com/ra-rs/ra", version = "0.2.1", features = ["rt"] }
embassy-hal-internal = "0.5.0"
embedded-hal = "1.0.0"
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
